[metadata]
license_files = LICENSE
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type='text/markdown'
keywords = vsco, download, scrape, parse, photo, social-network
classifiers =
        Programming Language :: Python :: 3,
        Programming Language :: Python :: 3.7,
        Programming Language :: Python :: 3.8,
        Programming Language :: Python :: 3.9
install_requires =
    aiohttp~=3.7.4
    aiofiles~=0.7.0
    setuptools; python_version >= "3.7"